# swagger.yaml
@@ -1,11 +1,10 @@
-
 openapi: 3.0.0
 info:
   title: Сервіс Статей
   description: Написати сервіс статей (2000 символів). Статті є публічними для всіх, зареєстровані користувачі можуть редагувати статтю та очікувати на схвалення її модераторами (користувачі із більшими правами). Передбачити варіант редагування, коли стаття на розгляді модератором, а інший користувач її теж редагує. Модератори мають бачити статті, які очікують їх схвалення
   version: 0.0.1
   contact:
-    url: "https://github.com/mkrvsk/PPLab4"
+    url: "https://github.com/salabay777/pp_project"
 servers:
 - url: /
 tags:
@@ -17,41 +16,77 @@ tags:
   description: Moderators functions
 - name: updatedArticle
   description: Operations about versions of article
-paths:  
-  /updateArticle/{ArticleId}/{UserId}/{EditedBody}:
+- name: state
+  description: Operations about state
+paths:
+  /updateArticle:
     post:
       tags:
       - updatedArticle
       summary: Edit created article
       operationId: EditArticle
-      parameters:
-      - name: ArticleId
-        in: path
-        description: ID of Article to found
+      requestBody:
+        description: Create a new article
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Article'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/Article'
         required: true
-        schema:
-          type: integer
-          format: int64
-      - name: UserId
-        in: path
-        description: User Id who edit article
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: EditedBody
-        in: path
-        description: New version of article
-        required: true
-        schema:
-          type: string
       responses:
         200:
           description: successful operation
           content: {}
-        404:
-          description: Entered ID does not exist
+        400:
+          description: Article body wasn't defined right
           content: {}
+      security:
+      - ApiKeyAuth: []
+    put:
+      tags:
+      - updatedArticle
+      summary: Accept article
+      parameters:
+      - name: ArticleId
+        in: query
+        description: Article ID to delete
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: ModeratorKey
+        in: query
+        description: Moderators key for accept or delete article
+        required: true
+        schema:
+          type: string
+      - name: Date
+        in: query
+        description: Date update of article
+        required: true
+        schema:
+          type: string
+          format: date
+      responses:
+        200:
+          description:  Article succeful accepted
+          content:
+            applicationsArticle/json:
+              schema:
+                $ref: '#/components/schemas/UpdatedArticle'
+            applicationArticle/xml:
+               schema:
+                $ref: '#/components/schemas/UpdatedArticle'
+        404:
+          description: Entered ArticleID does not exist
+          content: {}
+        400:
+          description: Invalid moderator key
+          content: {}
+        402:
+          description: A bad date was supplied
       security:
       - ApiKeyAuth: []
   /updateArticle/{ArticleId}:
@@ -77,61 +112,86 @@ paths:
               applicationUpdatedArticle/json:
                 schema:
                   $ref: '#/components/schemas/UpdatedArticle'
+        400:
+          description: Invalid ArticleId supplied
         404:
-          description: Entered ID does not exist 
+          description: A articles versions with provided ID was not found
       security:
-      - ApiKeyAuth: [] 
-  /updateArticle/{ModeratorKey}/{ArticleId}/{ArticleVersion}:
-    put:
+      - ApiKeyAuth: []
+  /state:
+    post:
       tags:
-      - updatedArticle
-      summary: Accept article
+      - state
+      summary: Add a new state
+      operationId: addState
+      requestBody:
+        description: Create a new state
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/State'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/State'
+        required: true
+      responses:
+        200:
+          description: state was successfully added
+        400:
+          description: state with such name already exists
+        404:
+          description: Body wasn't defined
+          content: {}
+      security:
+      - ApiKeyAuth: []
+      x-codegen-request-body-name: body
+  /state/{StateId}:
+    get:
+      tags:
+      - state
+      summary: Get state
       parameters:
-      - name: api_key
-        in: header
-        schema:
-          type: string
-      - name: ArticleId
+      - name: StateId
         in: path
-        description: Article ID to delete
+        description: ID of State to found
         required: true
         schema:
           type: integer
           format: int64
-      - name: ModeratorKey
-        in: path
-        description: Moderators key for accept or delete article
-        required: true
-        schema:
-          type: string
-      - name: ArticleVersion
-        in: path
-        description: Article version to accept
-        required: true
-        schema:
-          type: string
       responses:
         200:
-          description:  Article succeful accepted 
+          description: successful operation
           content:
-            applicationsArticle/json:
+            application/xml:
               schema:
                 $ref: '#/components/schemas/Article'
-            applicationUser/json:
+            application/json:
               schema:
-                $ref: '#/components/schemas/User'
-            applicationArticle/xml:
-               schema:
                 $ref: '#/components/schemas/Article'
-            applicationUser/xml:
-               schema:
-                $ref: '#/components/schemas/User'
+        400:
+          description: Invalid stateId supplied
         404:
-          description: Entered ID does not exist
-          content: {}
-        403:
-          description: Invalid moderator key 
-          content: {}
+          description: A state with provided ID was not found
+    delete:
+      tags:
+      - state
+      summary: Delete a State
+      operationId: deleteState
+      parameters:
+      - name: StateId
+        in: path
+        description: State ID to delete
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: state was successfully deleted
+        400:
+          description: Invalid stateId supplied
+        404:
+          description: A state with provided ID was not found
       security:
       - ApiKeyAuth: []
   /article:
@@ -151,17 +211,14 @@ paths:
               $ref: '#/components/schemas/Article'
         required: true
       responses:
-        405:
-          description: Name wasn't defined
-          content: {}
-        406:
-          description: Body wasn't defined
-          content: {}
-        403:
+        200:
+          description: article was successfully added
+        400:
+          description: Body wasn't defined right
+        404:
           description: Selected ID is already in use
       security:
       - ApiKeyAuth: []
-      x-codegen-request-body-name: body
   /article/{ArticleId}:
     get:
       tags:
@@ -186,18 +243,15 @@ paths:
               schema:
                 $ref: '#/components/schemas/Article'
         404:
-          description: Entered ID does not exist 
-  /article/{ModeratorKey}/{ArticleId}:
+          description: A article with provided ID was not found
+        400:
+          description: Entered ID does not right
     delete:
       tags:
       - article
       summary: Delete a Article
       operationId: deleteArticle
       parameters:
-      - name: api_key
-        in: header
-        schema:
-          type: string
       - name: ArticleId
         in: path
         description: Article ID to delete
@@ -205,18 +259,14 @@ paths:
         schema:
           type: integer
           format: int64
-      - name: ModeratorKey
-        in: path
-        description: Moderators key for accept or delete article
-        required: true
-        schema:
-          type: string
       responses:
-        404:
-          description: Entered ID does not exist
+        200:
+          description: article was successfully deleted
+        400:
+          description: Invalid articleId supplied
           content: {}
-        403:
-          description: Invalid moderator key 
+        404:
+          description: A article with provided ID was not found
           content: {}
       security:
       - ApiKeyAuth: []
@@ -228,17 +278,22 @@ paths:
       description: This can only be done by the unlogged in user
       operationId: createUser
       requestBody:
-        description: Created user object
+        description: Create a new user
         content:
-          multipart/form-data:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+          application/xml:
             schema:
               $ref: '#/components/schemas/User'
         required: true
       responses:
-        default:
+        200:
           description: successful operation
-          content: {}
-      x-codegen-request-body-name: body
+        400:
+          description: body wasn't defined right
+        404:
+          description: user with such username already exists
   /user/login:
     get:
       tags:
@@ -301,7 +356,6 @@ paths:
       parameters:
       - name: userId
         in: path
-        description: 'The name that needs to be fetched. Use user1 for testing. '
         required: true
         schema:
           type: integer
@@ -317,7 +371,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
         400:
-          description: Invalid username supplied
+          description: Invalid userId supplied
           content: {}
         404:
           description: User not found
@@ -333,44 +387,43 @@ paths:
       parameters:
       - name: userId
         in: path
-        description: The name that needs to be deleted
         required: true
         schema:
           type: string
       responses:
+        200:
+          description: User was successfully deleted
         400:
-          description: Invalid username supplied
-          content: {}
+          description: Invalid userID supplied
         404:
           description: User not found
-          content: {}
       security:
-      - ApiKeyAuth: [] 
-  /moderator/{ModeratorKey}:
+      - ApiKeyAuth: []
+  /moderator:
     post:
       tags:
       - moderator
       summary: Create moderator
       description: This can only be done by the logged in user.
       operationId: createModerator
-      parameters:
-      - name: ModeratorKey
-        in: path
-        description: Moderators key for accept or delete article
-        required: true
-        schema:
-          type: string
       requestBody:
-        description: Created user object
+        description: Create a new user
         content:
-          multipart/form-data:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Moderator'
+          application/xml:
             schema:
               $ref: '#/components/schemas/Moderator'
         required: true
       responses:
-        default:
+        200:
           description: successful operation
           content: {}
+        404:
+          description: Moderator with such moderatorname already exists
+        400:
+          description: Body wasn't defined right
       x-codegen-request-body-name: body
       security:
       - ApiKeyAuth: []
@@ -472,6 +525,16 @@ components:
           example: D9YH63Lk3Vx7drr
       xml:
         name: Moderator
+    State:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+      xml:
+        name: Moderator
     User:
       type: object
       properties:
@@ -526,11 +589,6 @@ components:
           type: string
         state:
           type: string
-          enum:
-            - rejected
-            - accepted
-            - under_consideration
-            - awaits_resolution
       xml:
         name: Article
   securitySchemes:
